Products.MeetingLiege Changelog
===============================

4.1b4 (unreleased)
------------------

- Simplified 'mayCorrect' for meeting and item WF condition adapters

4.1b3 (2018-01-31)
------------------

- 'Accept and return' transition also works when item not to send to Council, in this case,
  item is just duplicated and not sent to Council
- Adapted config.MEETINGREVIEWERS format
- Define RETURN_TO_PROPOSING_GROUP_STATE_TO_CLONE for 'meetingitembourgmestre_workflow' so
  'return_to_proposing_group' wfAdaptation is selectable
- Do not bind default workflow for Meeting/MeetingItem types so reapplying the workflows.xml
  portal_setup step do not change workflow selected on these types as it is different when
  managed by the MeetingConfig

4.1b2 (2018-01-23)
------------------
- Added 'Bourgmestre' MeetingConfig (workflow, adapters, ...) :
  - main_infos history on item
  - bourgmestre WFs for item and meeting
  - hide history transitions for relevant roles

4.1b1 (2017-12-01)
------------------
- When an item is sent from College to Council, keep the 'toDiscuss' field
- Do not call at_post_edit_script directly anymore, use Meeting(Item)._update_after_edit
- Moved to advanced tests/helpers.WF_STATE_NAME_MAPPINGS from PloneMeeting

4.0 (2017-08-18)
----------------
- Finance advisers of an item are now able to add decision annexes
  when the item is decided
- Added possibility to manage MeetingItem.itemIsSigned when item is
  'presented' or 'itemfrozen' besides the fact that it is still manageable
  when the item is decided
- Added a 'Echevinat' faceted advanced criterion based on groupsOfMatter index
- Moved historization of signed financial advice to real versions
- Added listType 'Addendum' for items of Council (added possibility to define 'items
  without a number' as well)
- Added possibility to manually send items from College to Council once item is 'itemfrozen'
- Restricted power observers may not see 'late' council items if not decided